--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -49,6 +49,11 @@
                     android:layout_height="match_parent" />
 
             </android.support.v7.widget.CardView>
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="500dp">
+           <include layout="@layout/weather"/>
+           </android.support.v7.widget.CardView>
 
 
         </LinearLayout>
